--- a/modelosClasicos/WebRoot/WEB-INF/classes/bundles/application-resources.properties
+++ b/modelosClasicos/WebRoot/WEB-INF/classes/bundles/application-resources.properties
@@ -1,7 +1,7 @@
 
 # general
-application.title=classicModels
+application.title=Gestion de Empleados
 
 # navigation
-navigation.backToDashboard=Back to Dashboard
-navigation.view=View
+navigation.backToDashboard=Volver al Inicio
+navigation.view=Vista
